# gaze_tracking

./: .gitattributes  .gitignore  CMakeLists.txt  FRAME_RECORDER.md  README.md  Test.ipynb  cv_constants.py  dots.json  frame_recorder.py  labels.json  requirements.txt
Gesture/: gesture_classification.py  gesture_master.py  hand_head_localization.py  hand_rgb.json  keras_googlenet3.py  load_test.py  webcamtest.py
ad_demo/: README.md  bower.json  index.html
gaze_demo/: 10.10.1.108  bower.json  index.html  index.js  package.json
notebooks/: Data Collection Integrity.ipynb  Faster Gaze Vector Extraction.ipynb  Gaze Vectors and Failure Modes #2.ipynb  Gaze Vectors and Failure Modes.ipynb  Python Pipeline.ipynb  Training and Analysis.ipynb  gaze_vectors_with_failures_2.csv  hello_world.html  kinect_classification.py  kinect_test.py  live_classification.py  samples-with-multi-detections.pkl  websock.py
notebooks/features/: __init__.py  eye_ellipses.py  eye_regions.py  face_detection.py  face_landmarks.py  feature.py  gaze_matrix.py  head_orientation.py  iris_finder.py  types.py
src/: Features.cpp  Features.h  gaze_matrix.cpp  gaze_tracker_1.cpp  history_gaze_tracker.cpp  ml_gaze_tracker_1.cpp
src/models/: IrisFinder.py  Random_forrest_classifier.yml  history_Random_forrest_classifier.yml  normalized_Random_forrest_classifier.yml
